# Lighttwist

./: CMakeLists.txt  README.md  README.txt  configure
CMakeModules/: cmake_uninstall.cmake.in
Modules/: FindAVCODEC.cmake  FindAVFORMAT.cmake  FindAVUTIL.cmake  FindBMC.cmake  FindJSW.cmake  FindLUA.cmake  FindOSG.cmake  FindPTHREAD.cmake  FindSWIG.cmake  FindSWSCALE.cmake
nv-config/: README.txt  nvidia-settings-rc  xorg.conf
scripts/: adjust_network_buffers  do_playerlua_lanterne  do_playerlua_lune  do_playerlua_minimal  install_script  update_to_client_lighttwist  update_to_prima1
src/: CMakeLists.txt
src/control/: CMakeLists.txt  joystick_calib  ltjoystick.c
src/interface/: CMakeLists.txt  DnDBox.cpp  DnDBox.h  Fl_Gel_Tabs.cxx  blendWindow.cpp  blendWindow.h  cam2projWindow.cpp  cam2projWindow.h  canvasIcon.cpp  canvasIcon.h  captureWindow.cpp  captureWindow.h  colorWindow.cpp  colorWindow.h  gammaWindow.cpp  gammaWindow.h  lighttwist.cpp  lighttwist.h  lighttwistUI.cpp  lighttwistUI.h  listitem.c  listitem.h  liveWindow.cpp  liveWindow.h  media.cpp  media.h  my_log.h  patternWindow.cpp  patternWindow.h  playWindow.cpp  playWindow.h  playlistLayer.cpp  playlistLayer.h  playlistMedia.cpp  playlistMedia.h  playlistTimeline.cpp  playlistTimeline.h  precropWindow.cpp  precropWindow.h  projectWindow.cpp  (+13 more)
src/interface/FL/: Fl_Gel_Tabs.H
src/interface/imgs/: ct_mid_off.xpm  ct_mid_on.xpm  lt_crv_off.xpm  lt_crv_on.xpm  lt_sep_off.xpm  lt_sep_on.xpm  rt_crv_off.xpm  rt_crv_on.xpm  rt_sep_off.xpm  rt_sep_on.xpm
src/player-master/: CMakeLists.txt
src/player-master/default/: CMakeLists.txt  ch_ctrl.pd  ch_dist.pd  ch_env.pd  ch_grp.pd  ch_norm.pd  ch_weight.pd  divide.pd  minus.pd  output~.pd  player_master_default.pd_linux  playlist.c  playlist_parse.c  playlist_parse.h  playlist_patch.c  playlist_player.pd  plus.pd  test_dist.pd  test_luabox.pd  test_readsf.pd  test_weight.pd  times.pd
src/player-master/lua/: CMakeLists.txt  Capture.lua  Class.lua  Crayon.lua  Image.lua  Media.lua  Model.lua  Movie.lua  Player.lua  README  RemoteControl.lua  extra_pd.c  init.lua  luabox.c  mcnetsend.c  midipatch.pd  midipatch_caserne.pd  midipatch_lune.pd  midipatch_prospero.pd  midipatch_prospero_advanced.pd  midipatch_yukie.pd  patch.lua  patch_lune.lua  patch_yukie.lua  player_master_lua.pd_linux  test_mcnetsend.pd  test_midi.pd  track_yukie.pd
src/player-slave/: CMakeLists.txt
src/player-slave/default/: CMakeLists.txt  ReceiveThread.cpp  ReceiveThread.h  ltplayer.cpp
src/player-slave/lib-layers/: CMakeLists.txt  deform_3d.glsl  deform_video.glsl  lt3dlayer.cpp  lt3dlayer.h  ltcapturelayer.cpp  ltcapturelayer.h  ltcolorlayer.cpp  ltcolorlayer.h  ltlayer.cpp  ltlayer.h  ltmulti3dlayer.cpp  ltmulti3dlayer.h  lttiledvideolayer.cpp  lttiledvideolayer.h  lttileinfo.cpp  lttileinfo.h  ltvideocontroller.cpp  ltvideocontroller.h  ltvideolayer.cpp  ltvideolayer.h  ltvideotexture.cpp  ltvideotexture.h  stereo_rotate_vert.glsl
src/player-slave/lua/: CMakeLists.txt  ImguPluginTexture.cpp  ImguPluginTexture.h  commands.lua  ltimgupluginlayer.cpp  ltimgupluginlayer.h  ltplayerlua.cpp  luawrapfunctions.cpp  luawrapfunctions.h  luawrapfunctions.i  luawrapfunctions_wrap.cxx
src/precrop/: CMakeLists.txt  PrecropMain.cpp  PrecropMain.h  PrecropThread.cpp  PrecropThread.h  ltprecrop.cpp
src/remote/: CMakeLists.txt  ltports.h  ltremote  ltremote.c  remote.c  remote.h
src/scan/: CMakeLists.txt  blend.c  blend.h  cam2proj.c  cam2proj.c_bak  cam2proj.h  ltblend-diffuse  ltblend-diffuse.c  ltblend-distance  ltblend-distance.c  ltcam2proj-noise.c  ltcam2proj.c  ltcolor  ltcolor.c  ltcolorfit  ltcolorfit.c  ltgamma  ltgamma-colorchecker  ltgamma-colorchecker.c  ltgamma.c  ltselect.c  ltsmooth-homography  ltsmooth-homography.c  ltstl.cpp  ltsum  ltsum.c  ltuv2proj  ltuv2proj.c  select.c  select.h  stl.cpp  stl.h
src/utils/: CMakeLists.txt  Thread.cpp  Thread.h  ThreadInterface.cpp  ThreadInterface.h  entry.c  entry.h  gamma.c  gamma.h  graycode.c  graycode.h  ltsys.c  ltsys.h  noise.cpp  noise.h  pd_send.c  pd_send.h  triangle.c  triangle.h  uvmap.c  uvmap.h
