add_executable (lighttwist lighttwist.cpp lighttwistUI.cpp Fl_Gel_Tabs.cxx DnDBox.cpp listitem.c ${LIGHTTWIST_SOURCE_DIR}/src/remote/remote.c media.cpp windowInterface.cpp blendWindow.cpp cam2projWindow.cpp uv2projWindow.cpp canvasIcon.cpp colorWindow.cpp uvmapWindow.cpp gammaWindow.cpp captureWindow.cpp liveWindow.cpp playWindow.cpp playlistTimeline.cpp playlistMedia.cpp playlistLayer.cpp precropWindow.cpp projectWindow.cpp shellWindow.cpp smoothWindow.cpp patternWindow.cpp watchCommand.cpp)
target_link_libraries (lighttwist ${IMGU_LIBS} ${GUI_LIBS} ${LT_LIBS} ${BMC_LIBS})

install(TARGETS lighttwist RUNTIME DESTINATION ${LT_BIN})
install(FILES imgs/nodata.png DESTINATION ${LT_SHARE})
install(FILES imgs/crop_ctrl_inner.png DESTINATION ${LT_SHARE})
install(FILES imgs/crop_ctrl_outer.png DESTINATION ${LT_SHARE})
install(FILES imgs/error.png DESTINATION ${LT_SHARE})
install(FILES imgs/fade_ctrl_low.png DESTINATION ${LT_SHARE})
install(FILES imgs/fade_ctrl_high.png DESTINATION ${LT_SHARE})
install(FILES imgs/fond_blanc.png DESTINATION ${LT_SHARE})
install(FILES imgs/fond_noir.png DESTINATION ${LT_SHARE})
install(FILES imgs/fond_damier.png DESTINATION ${LT_SHARE})
install(FILES imgs/speaker.png DESTINATION ${LT_SHARE})
install(FILES imgs/logo-lt.png DESTINATION ${LT_SHARE})
install(FILES imgs/camera-top.png DESTINATION ${LT_SHARE})
install(FILES imgs/tl_pointer.png DESTINATION ${LT_SHARE})
install(FILES imgs/setup_on.png DESTINATION ${LT_SHARE})
install(FILES imgs/setup_off.png DESTINATION ${LT_SHARE})
install(FILES imgs/setup_disabled.png DESTINATION ${LT_SHARE})
install(FILES imgs/play_on.png DESTINATION ${LT_SHARE})
install(FILES imgs/play_off.png DESTINATION ${LT_SHARE})
install(FILES imgs/play_disabled.png DESTINATION ${LT_SHARE})
install(FILES imgs/sound_on.png DESTINATION ${LT_SHARE})
install(FILES imgs/sound_off.png DESTINATION ${LT_SHARE})
install(FILES imgs/sound_disabled.png DESTINATION ${LT_SHARE})
install(FILES imgs/loop_on.png DESTINATION ${LT_SHARE})
install(FILES imgs/loop_off.png DESTINATION ${LT_SHARE})
install(FILES imgs/loop_disabled.png DESTINATION ${LT_SHARE})
install(FILES imgs/joystick_on.png DESTINATION ${LT_SHARE})
install(FILES imgs/joystick_off.png DESTINATION ${LT_SHARE})
install(FILES imgs/joystick_disabled.png DESTINATION ${LT_SHARE})
install(FILES imgs/new.png DESTINATION ${LT_SHARE})
install(FILES imgs/open.png DESTINATION ${LT_SHARE})
install(FILES imgs/save.png DESTINATION ${LT_SHARE})




